# dark-souls-file-parser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Reader.cpp  Readme.md  byteHelpers.go  decrypt.go  fileHandling.go  main.cpp  main.go
src/: Reader.cpp  Reader.h  main.cpp
